fix(platform-ie): alignment, missing icons and colors fallback (#101)
* chore(release): publish 1.3.4-alpha.0

* Revert "chore(release): publish 1.3.4-alpha.0"

This reverts commit 95cd0720

* chore(release): publish 1.3.4-alpha.1 🙋‍♀️

* Revert "chore(release): publish 1.3.4-alpha.1"

This reverts commit 95cd0720

* chore(release): publish 1.3.4 🇬🇫

* chore: publish --canary command was running with errors

Check https://github.com/lerna/lerna/issues/1769 for more info.

* chore(release): publish 1.3.5 🦕

* Develop (#99)

* feat(ac-collapse): basic component functionality

* merge (#100)

* chore(release): publish 1.3.4-alpha.0

* Revert "chore(release): publish 1.3.4-alpha.0"

This reverts commit 95cd0720

* chore(release): publish 1.3.4-alpha.1 🙋‍♀️

* Revert "chore(release): publish 1.3.4-alpha.1"

This reverts commit 95cd0720

* chore(release): publish 1.3.4 🇬🇫

* chore: publish --canary command was running with errors

Check https://github.com/lerna/lerna/issues/1769 for more info.

* chore(release): publish 1.3.5 🦕



* chore(release): publish 1.3.6 📐

* fix(ac-fa-icon): wrong icon position in IE

Closes #91.

* fix(ac-fa-icon): wrong icon position in IE

Closes #91.

* fix(theme): ie current-color fallbacks

--- a/core/src/components/atoms/ac-avatar/ac-avatar.scss
+++ b/core/src/components/atoms/ac-avatar/ac-avatar.scss
@@ -28,16 +28,27 @@ ac-avatar {
       white-space: nowrap;
 
       .ac-avatar__title {
-        color: current-color("contrast") !important;
+        color: current-color("contrast");
         font-size: $font-small;
         font-weight: bold;
         text-transform: capitalize;
       }
 
       .ac-avatar__subtitle {
-        color: current-color("contrast", 0.6) !important;
+        color: current-color("contrast", 0.6);
         font-size: $font-tiny;
       }
+    }
+  }
+}
+
+@include browser-ie {
+  ac-avatar {
+    .ac-avatar__title {
+      color: inherit;
+    }
+    .ac-avatar__subtitle {
+      color: inherit;
     }
   }
 }
