--- a/core/src/components/atoms/ac-button/ac-button.scss
+++ b/core/src/components/atoms/ac-button/ac-button.scss
@@ -48,6 +48,19 @@ ac-button {
 }
 
 
+// Browser is IE
+// ---------------------------------------------------------
+
+@include browser-ie {
+  ac-button.ac-button--icon-only {
+    .ac-button__text {
+      width: 100%;
+    }
+  }
+}
+
+
+
 // ---------------------------------------------------------------------------------------------------------------------
 // Size Property
 // ---------------------------------------------------------------------------------------------------------------------
