--- a/core/src/components/molecules/ac-menu/ac-menu-item/ac-menu-item.scss
+++ b/core/src/components/molecules/ac-menu/ac-menu-item/ac-menu-item.scss
@@ -87,6 +87,14 @@ ac-menu-item {
   }
 }
 
+@include browser-ie {
+  ac-menu-item {
+    .ac-menu-item__native {
+      fill: currentColor !important;
+      color: inherit !important;
+    }
+  }
+}
 
 // ---------------------------------------------------------------------------------------------------------------------
 // State Modifiers
