--- a/core/src/components/templates/ac-login/ac-login.scss
+++ b/core/src/components/templates/ac-login/ac-login.scss
@@ -26,6 +26,7 @@ ac-login {
     top: -275px;
     left: -175px;
     width: 1050px;
+    height: 1050px;
     fill: $neutral__white;
   }
 
@@ -53,6 +54,7 @@ ac-login {
       top: 10%;
       left: -100%;
       width: 250%;
+      height: 250%;
     }
     .ac-login__wrapper {
       justify-content: flex-end;
